chore:fixed redis cahe issue